--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,15 @@ body {
   background-color: #ffcf00; }
 
 a {
-  color: black; }
+  color: white; }
 
 a:hover {
-  color: #03a5b6; }
+  color: #ffb200;
+  text-decoration: none; }
+
+h4 {
+  color: white;
+  font-weight: 600; }
 
 h4,
 p {
@@ -49,12 +54,23 @@ h6 {
   font-weight: 700;
   color: white; }
 
+.active {
+  color: #ffcf00; }
+
 .header-img {
   position: relative;
   height: 85vh;
-  background-image: url(../img/theme-waterfall.jpg);
   background-size: cover;
-  padding: 0; }
+  padding: 0;
+  background-image: url(../img/theme-waterfall.jpg); }
+
+.service-header-img {
+  position: relative;
+  height: 85vh;
+  background-size: cover;
+  padding: 0;
+  background-image: url(../img/archbaby.jpg);
+  background-position: center; }
 
 .overlay {
   background-image: linear-gradient(135deg, rgba(3, 165, 182, 0.55), rgba(3, 165, 182, 0.55), rgba(3, 165, 182, 0.55), rgba(255, 178, 0, 0.55), rgba(255, 207, 0, 0.55));
@@ -64,18 +80,20 @@ h6 {
   align-items: center;
   justify-content: center;
   height: 85vh; }
-  .overlay p,
-  .overlay h1 {
+  .overlay p {
     font-style: italic;
     text-align: center;
-    rotate: -6deg; }
-  .overlay p {
+    rotate: -6deg;
     color: white;
     font-size: 30px; }
-  .overlay h1 {
-    text-shadow: 2px 2px #ffcf00;
-    color: #ffb200;
-    font-size: 80px; }
+
+h1 {
+  text-shadow: 2px 2px 2px #ffcf00;
+  color: #ffb200;
+  font-size: 80px;
+  font-style: italic;
+  text-align: center;
+  rotate: -6deg; }
 
 .service-display {
   --s: 200px;
@@ -87,7 +105,7 @@ h6 {
   right: calc(100vh/4);
   overflow: hidden;
   border: 5px solid #03a5b6;
-  box-shadow: 2px 2px 5px 2px rgba(0, 0, 139, 0.553); }
+  box-shadow: 0px 0px 15px 3px #004ea8b9; }
   .service-display img {
     grid-area: 1/1;
     width: 100%;
@@ -103,23 +121,25 @@ h6 {
   .service-display .first {
     animation-delay: 6s; }
 
-.service-display::after {
-  background-image: url(../img/balloonframe.png); }
-
 @keyframes m {
-  0%, 3% {
+  0%,
+  3% {
     transform: rotate(0); }
-  22%, 27% {
+  22%,
+  27% {
     transform: rotate(-90deg); }
-  47%, 52% {
+  47%,
+  52% {
     transform: rotate(-180deg); }
-  72%, 77% {
+  72%,
+  77% {
     transform: rotate(-270deg); }
-  98%, 100% {
+  98%,
+  100% {
     transform: rotate(-360deg); } }
 
 .fab {
-  background-color: #03a5b6;
+  background-color: #02bed3f6;
   border-radius: 50%;
   height: 90px;
   aspect-ratio: 1/1;
@@ -127,7 +147,7 @@ h6 {
   bottom: 60px;
   right: 50px;
   z-index: 2000;
-  box-shadow: 3px 3px 4px grey;
+  box-shadow: 3px 3px 10px 2px #004ea8b9;
   color: #ffcf00;
   font-weight: 700;
   line-height: 1.2em; }
@@ -137,12 +157,19 @@ h6 {
     text-shadow: 2px 1px #ffb200; }
 
 .booking-btn {
-  box-shadow: 1px 1px 10px #013673b9;
+  box-shadow: 1px 1px 10px #004ea8b9;
   color: white;
-  text-shadow: 2px 1px 10px #001d46;
+  text-shadow: 2px 1px 10px #004ea8b9;
   font-size: 25px;
   font-weight: bold;
-  border: 2px solid #ffcf00; }
+  border: 2px solid #ffcf00;
+  width: 100%;
+  background-color: #02bed3f6; }
+  .booking-btn :hover {
+    color: #ffb200; }
+
+.btn:hover {
+  color: #ffcf00; }
 
 /* Marquee */
 .footer-ad {
@@ -174,14 +201,6 @@ h6 {
   100% {
     margin-left: -6500px; } }
 
-.scroll-img {
-  height: 60px;
-  margin-inline: 40px; }
-
-.scroll-img img:hover {
-  transform: scale(1.1);
-  cursor: pointer; }
-
 /* Testimonial */
 .testimonial {
   height: 300px;
@@ -196,7 +215,109 @@ h6 {
   width: 200px;
   padding: 20px;
   border: 1px solid #ffb200;
-  box-shadow: 1px 1px 5px 1px #b1b1b1; }
+  box-shadow: 1px 1px 5px 1px #004ea8b9; }
 
 .testimonial-item p {
   text-align: right; }
+
+.phone {
+  background-image: url(../img/phone.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 500px;
+  width: 244px; }
+
+.phone-container {
+  width: 244px; }
+
+iframe {
+  margin-top: 25px;
+  margin-bottom: 0;
+  margin-left: 15px;
+  border-radius: 15px; }
+
+.leaning-img-container {
+  width: 225px;
+  padding-top: 120px; }
+
+.leaning-img {
+  height: 400px;
+  width: 225px; }
+
+.instagram-img {
+  height: 40px; }
+
+.main-text {
+  padding-top: 100px; }
+  .main-text h1 {
+    font-size: 60px; }
+  .main-text h4 {
+    text-align: center; }
+  .main-text p {
+    font-weight: 800;
+    font-size: 1.1em; }
+
+.phone-leaning-container {
+  width: 470px; }
+
+.scrolling-gallery-container {
+  width: 100%;
+  overflow: hidden; }
+
+.scrolling-gallery {
+  height: 100px;
+  width: 3550px; }
+  .scrolling-gallery img {
+    height: 100px;
+    margin-right: -5px; }
+
+.initiate-scroll {
+  animation: galleryscroll 15s linear infinite; }
+
+@keyframes galleryscroll {
+  0% {
+    margin-left: 0px; }
+  100% {
+    margin-left: -1580px; } }
+
+.service-row {
+  margin: 5px 2em;
+  padding: 0; }
+  .service-row p {
+    color: white; }
+  .service-row h6 {
+    font-size: 25px; }
+
+.service-img {
+  border-radius: 50%;
+  width: 100%;
+  max-height: 150px;
+  max-width: 150px; }
+
+.service-text {
+  max-width: 400px; }
+
+.ser-yel {
+  align-items: center;
+  justify-content: center; }
+  .ser-yel h6 {
+    color: #ffcf00; }
+  .ser-yel img {
+    border: 5px solid #ffcf00; }
+  .ser-yel a {
+    color: #ffcf00; }
+  .ser-yel a:hover {
+    color: #ffb200; }
+
+.ser-or {
+  text-align: right;
+  align-items: center;
+  justify-content: center; }
+  .ser-or h6 {
+    color: #ffb200; }
+  .ser-or img {
+    border: 5px solid #ffb200; }
+  .ser-or a {
+    color: #ffb200; }
+  .ser-or a:hover {
+    color: #ffcf00; }
